<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red1"
    tools:context="ra20_2014.taskmanager.Dodavanje">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:hint="@string/ime_zadatka"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:background="@color/dark_yellow"
                android:id="@+id/imezadatka" />

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="20dp"
                 android:weightSum="2">

                 <Button
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/izaberi_datum"
                  android:textAllCaps="false"
                  android:background="@drawable/mojoblik2"
                  android:id="@+id/izaberi_datum">
                 </Button>

                 <Button
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/izaberi_vreme"
                  android:text="@string/izaberi_vreme"
                  android:textAllCaps="false"
                  android:background="@drawable/mojoblik2"
                  android:layout_weight="1">
                 </Button>

             </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/izabrani_datum"
                    android:background="@color/dark_yellow"
                    android:layout_marginRight="20dp"
                    android:id="@+id/izabran_datum">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/izabrano_vreme"
                    android:hint="@string/izabrano_vreme"
                    android:background="@color/dark_yellow"
                    android:textAlignment="textEnd"
                    android:layout_gravity="right"

                    android:layout_weight="1">
                </TextView>

            </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:textAlignment="center"
                android:hint="@string/opis_zadatka"
                android:textAllCaps="false"
                android:id="@+id/opiszadatka"
                android:layout_marginTop="64dp"
                android:layout_below="@+id/linear_layout2"
                android:layout_alignParentLeft="true"
                android:background="@color/dark_yellow"
                android:layout_alignParentStart="true" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/opiszadatka"
                android:text="@string/podsetnik"
                android:layout_marginTop="34dp"
                android:background="@color/dark_yellow"
                android:checked="true"
                android:id="@+id/checkbox"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:id="@+id/izaberi_prioritet"
                android:text="@string/izaberi_prioritet"
                android:textAlignment="center"
                android:background="@color/dark_yellow"
                android:textAllCaps="false"
                android:layout_below="@id/checkbox"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:layout_below="@id/checkbox"
                android:orientation="horizontal"
                android:id="@+id/linear_layout1"
                android:weightSum="3">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/prioritet_visok"
                    android:textAllCaps="false"
                    android:id="@+id/button1"
                    android:background="@color/red" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/prioritet_srednji"
                    android:textAllCaps="false"
                    android:id="@+id/button2"
                    android:background="@color/yellow" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/prioritet_nizak"
                    android:textAllCaps="false"
                    android:id="@+id/button3"
                    android:background="@color/green" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="35dp"
                android:layout_below="@id/linear_layout1"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button4"
                    android:text="@string/dodaj"
                    android:textAllCaps="false"
                    android:background="@drawable/mojoblik2" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:id="@+id/button5"
                    android:text="@string/otkazi"
                    android:textAllCaps="false"
                    android:background="@drawable/mojoblik2" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
